app/deploy-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-microservice
  namespace: default
  labels:
    app: python-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-microservice
  template:
    metadata:
      labels:
        app: python-microservice
    spec:
      containers:
        - name: python-microservice
          image: 228041306903.dkr.ecr.ap-south-1.amazonaws.com/devops-assign-dev:23
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
      restartPolicy: Always
