app/deploy-files/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-microservice
  namespace: default
spec:
  selector:
    app: python-microservice
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
