app/deploy-files/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: python-microservice
  namespace: default
spec:
  hosts:
  - "*" 
  gateways:
  - python-microservice-gateway
  http:
  - match:
    - uri:
        prefix: "/" 
    route:
    - destination:
        host: python-microservice
        port:
          number: 8000
